--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -16,7 +16,7 @@ services:
     container_name: celery
     build:
         context: .
-        dockerfile: docker/Dockerfile
+        dockerfile: Dockerfile
     env_file:
       - .env
     command: celery -A celery_parsing worker -l INFO
@@ -29,7 +29,7 @@ services:
     container_name: celery-beat
     build:
         context: .
-        dockerfile: docker/Dockerfile
+        dockerfile: Dockerfile
     env_file:
       - .env
     command: celery -A celery_parsing beat -l INFO -s data/celerybeat-schedule
