--- a/docker/docker-compose.yml
+++ b/docker/docker-compose.yml
@@ -20,9 +20,9 @@ services:
         dockerfile: docker/Dockerfile
     env_file:
       - ../.env
+    environment:
+      - REDIS_HOST=redis
     command: celery -A celery_parsing worker -l INFO
-    volumes:
-      - ./:/
     depends_on:
       - redis
 
@@ -33,9 +33,9 @@ services:
         dockerfile: docker/Dockerfile
     env_file:
       - ../.env
+    environment:
+      - REDIS_HOST=redis
     command: celery -A celery_parsing beat -l INFO -s data/celerybeat-schedule
-    volumes:
-      - ./:/
     depends_on:
       - celery
 
